--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -1,6 +1,11 @@
-// $primaryColor: ;
-// $secondaryColor: ;
-// $bgPrimary ;
-// $bgSecondary ;
-// $primaryFont: ;
-// $accentColor: ;
+$primaryColor: wheat;
+$bgPrimary: wheat;
+$bgSecondary: #fff;
+$primaryFontColor: #000;
+$secondaryFontColor: #29339b;
+$buttonColor: #29339b;
+$accentColor: darkorange;
+
+// Typography 
+$mainFont: 'Fira Sans', sans-serif;
+$logoFont: 'Mogra', cursive;
