--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -2,4 +2,5 @@
 @import "partials/variables";
 @import "partials/globalSettings";
 @import "partials/headerAndFooter";
+@import "partials/main";
 @import "partials/mediaQueries";
