--- a/styles/style.css
+++ b/styles/style.css
@@ -284,8 +284,7 @@ p,
 ul,
 li,
 a,
-button,
-fieldset {
+button {
   margin: 0;
   padding: 0;
 }
@@ -295,7 +294,6 @@ ul {
 }
 
 li {
-  list-style: none;
   text-decoration: none;
 }
 
@@ -310,22 +308,20 @@ a:visited {
   display: inline-block;
 }
 
+button a {
+  padding: 20px 30px;
+}
+
+button a:hover,
+button a:focus {
+  border-radius: 5px;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
 /* Button Styles */
-button {
-  border: none;
-  background: rebeccapurple;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-weight: bold;
-  padding: 15px 22px;
-  color: darkorange;
-}
-
-button:hover {
-  background: darkorange;
-  color: #29339b;
-}
-
 /* Typographic Styles */
 h1 {
   font-size: 6rem;
@@ -336,6 +332,56 @@ h2 {
 }
 
 /* Navigation accessibility */
+/* Dropdown Button */
+.dropbtn {
+  background-color: navy;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+  display: block;
+}
+
 header {
   border-bottom: 1px solid #000;
   text-align: center;
@@ -354,6 +400,10 @@ main {
   border: 1px solid black;
   padding: 2%;
   text-align: center;
+}
+
+main ul li {
+  color: red;
 }
 
 /* Portrait tablet and small desktops */
