--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -8,4 +8,5 @@ $accentColor: darkorange;
 
 // Typography 
 $mainFont: 'Fira Sans', sans-serif;
-$logoFont: 'Mogra', cursive;
+$logoPrimaryFont: 'Lobster', cursive;
+$logoSecondaryFont:'Fira Sans', sans-serif; 
