--- a/styles/scss/partials/_headerAndFooter.scss
+++ b/styles/scss/partials/_headerAndFooter.scss
@@ -3,14 +3,16 @@ header {
     // justify-content: space-between;
     border-bottom: 1px solid #000;
     text-align: center;
+    background: #233237; // Gunmetal
+    margin-bottom: 2%;
 }
 
-h2 {
-    // padding: 2% 0; 
-}
+
 
 footer {
     text-align: center;
-    background: black;
-    color: white;
+    background: #984b43; // Rusty Red
+    color: #eac67a; // Warm Yellow
+    padding: 1.3% 0;
+    margin-top: 2%;
 }
