--- a/styles/style.css
+++ b/styles/style.css
@@ -256,7 +256,8 @@ html {
 body {
   font-size: 1.6rem;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: white;
+  color: #233237;
+  background-color: #eac67a;
   line-height: 1.6;
 }
 
@@ -324,27 +325,35 @@ button a:focus {
 /* Button Styles */
 /* Typographic Styles */
 h1 {
-  font-size: 6rem;
+  font-family: "Lobster", cursive;
+  color: #984b43;
+  font-size: 8rem;
+  line-height: 1.2;
 }
 
 h2 {
+  font-family: "Fira Sans", sans-serif;
   font-size: 4rem;
+  color: #eac67a;
+  line-height: 1.2;
 }
 
 /* Navigation accessibility */
 /* Dropdown Button */
 .dropbtn {
-  background-color: navy;
-  color: white;
+  width: 50rem;
+  background: #233237;
+  color: #eac67a;
   padding: 16px;
-  font-size: 16px;
+  font-family: "Fira Sans", sans-serif;
+  font-size: 2.5vw;
+  font-weight: bold;
   border: none;
-  cursor: pointer;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
+  background: #984b43;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -356,9 +365,8 @@ h2 {
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
+  background-color: #eac67a;
+  min-width: 100%;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -366,14 +374,14 @@ h2 {
 
 /* Links inside the dropdown */
 .dropdown-content li {
-  color: black;
+  color: #233237;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content li:hover {
   background-color: #ddd;
 }
 
@@ -382,28 +390,37 @@ h2 {
   display: block;
 }
 
+li:hover,
+li:focus,
+button:hover,
+button:focus {
+  cursor: pointer;
+}
+
 header {
   border-bottom: 1px solid #000;
   text-align: center;
+  background: #233237;
+  margin-bottom: 2%;
 }
 
 footer {
   text-align: center;
-  background: black;
-  color: white;
+  background: #984b43;
+  color: #eac67a;
+  padding: 1.3% 0;
+  margin-top: 2%;
 }
 
 main {
-  width: 50%;
   background-color: #fff;
-  margin: 3% auto;
-  border: 1px solid black;
+  margin: 5% auto;
   padding: 2%;
   text-align: center;
 }
 
-main ul li {
-  color: red;
+main.wrapper {
+  width: 50%;
 }
 
 /* Portrait tablet and small desktops */
