--- a/styles/scss/partials/_main.scss
+++ b/styles/scss/partials/_main.scss
@@ -1,10 +1,15 @@
 main {
     background-color: #fff;
     margin: 5% auto;
-    padding: 2%;
+    padding: 2% 3%;
     text-align: center;
 }
 
 main.wrapper {
     width: 50%;
+    margin: 2.5% auto;
+}
+
+ol {
+    padding: 0 5%;
 }
