--- a/styles/scss/partials/_variables.scss
+++ b/styles/scss/partials/_variables.scss
@@ -1,12 +1,8 @@
-$primaryColor: wheat;
-$bgPrimary: wheat;
-$bgSecondary: #fff;
-$primaryFontColor: #000;
-$secondaryFontColor: #29339b;
-$buttonColor: #29339b;
-$accentColor: darkorange;
+// Color Scheme
+ $primaryColor: #233237; // Gunmetal
+ $secondaryColor: #984b43; // Rusty Red
+ $bgColor: #eac67a; // Warm Yellow
 
 // Typography 
 $mainFont: 'Fira Sans', sans-serif;
-$logoPrimaryFont: 'Lobster', cursive;
-$logoSecondaryFont:'Fira Sans', sans-serif; 
+$logoFont: 'Lobster', cursive;
