--- a/styles/style.css
+++ b/styles/style.css
@@ -255,7 +255,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Fira Sans", sans-serif;
   color: #233237;
   background-color: #eac67a;
   line-height: 1.6;
@@ -283,6 +283,7 @@ h5,
 h6,
 p,
 ul,
+ol,
 li,
 a,
 button {
@@ -298,31 +299,6 @@ li {
   text-decoration: none;
 }
 
-/*  a Link Styles */
-a,
-a:hover,
-a:focus,
-a:active,
-a:visited {
-  text-decoration: none;
-  color: darkorange;
-  display: inline-block;
-}
-
-button a {
-  padding: 20px 30px;
-}
-
-button a:hover,
-button a:focus {
-  border-radius: 5px;
-  -webkit-transition: 1s;
-  transition: 1s;
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
-}
-
-/* Button Styles */
 /* Typographic Styles */
 h1 {
   font-family: "Lobster", cursive;
@@ -332,19 +308,18 @@ h1 {
 }
 
 h2 {
-  font-family: "Fira Sans", sans-serif;
   font-size: 4rem;
   color: #eac67a;
   line-height: 1.2;
 }
 
-/* Navigation accessibility */
 /* Dropdown Button */
 .dropbtn {
-  width: 50rem;
+  width: 45vw;
   background: #233237;
   color: #eac67a;
-  padding: 16px;
+  padding: 3% 5%;
+  margin-top: 3%;
   font-family: "Fira Sans", sans-serif;
   font-size: 2.5vw;
   font-weight: bold;
@@ -363,7 +338,7 @@ h2 {
 }
 
 /* Dropdown Content (Hidden by Default) */
-.dropdown-content {
+.dropdownContent {
   display: none;
   background-color: #eac67a;
   min-width: 100%;
@@ -373,7 +348,7 @@ h2 {
 }
 
 /* Links inside the dropdown */
-.dropdown-content li {
+.dropdownContent li {
   color: #233237;
   padding: 12px 16px;
   text-decoration: none;
@@ -381,8 +356,10 @@ h2 {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content li:hover {
+.dropdownContent li:hover,
+.dropdownContent li:focus {
   background-color: #ddd;
+  border: 1 solid #984b43;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
@@ -401,28 +378,80 @@ header {
   border-bottom: 1px solid #000;
   text-align: center;
   background: #233237;
-  margin-bottom: 2%;
 }
 
 footer {
   text-align: center;
   background: #984b43;
   color: #eac67a;
-  padding: 1.3% 0;
-  margin-top: 2%;
+  padding: 4px 0;
 }
 
 main {
   background-color: #fff;
   margin: 5% auto;
-  padding: 2%;
+  padding: 2% 3%;
   text-align: center;
 }
 
 main.wrapper {
   width: 50%;
+  margin: 2.5% auto;
+}
+
+ol {
+  padding: 0 5%;
 }
 
 /* Portrait tablet and small desktops */
+@media (max-width: 940px) {
+  main.wrapper {
+    width: 80%;
+  }
+  .dropbtn {
+    width: 50vw;
+    font-size: 3vw;
+  }
+  footer {
+    margin-top: 11.7%;
+  }
+}
+
 /* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  header .wrapper {
+    width: 95%;
+  }
+  main.wrapper {
+    width: 90%;
+    margin: 7% auto;
+  }
+  .dropbtn {
+    width: 60vw;
+    padding: 4% 6%;
+    font-size: 3.5vw;
+  }
+}
+
 /* Landscape phones and down */
+@media (max-width: 480px) {
+  body {
+    line-height: 2;
+  }
+  h1 {
+    font-size: 6.5rem;
+    line-height: 1;
+    margin-bottom: 3%;
+  }
+  h2 {
+    font-size: 3rem;
+  }
+  main.wrapper {
+    width: 95%;
+  }
+  .dropbtn {
+    width: 70vw;
+    padding: 6% 8%;
+    font-size: 4.5vw;
+  }
+}
