Fourth song added

--- a/styles/scss/partials/_globalSettings.scss
+++ b/styles/scss/partials/_globalSettings.scss
@@ -106,7 +106,7 @@ h2 {
     display: block;
 }
 
-/* Change color of dropdown links on hover */ // Focus on Menu no working!!
+/* Change color of dropdown links on hover */ // Focus on Menu not working!!
 .dropdownContent li:hover,
 .dropdownContent li:focus {
     background-color: #ddd;
