Final Version of the whole project???

--- a/styles/scss/partials/_headerAndFooter.scss
+++ b/styles/scss/partials/_headerAndFooter.scss
@@ -8,27 +8,5 @@ footer {
     text-align: center;
     background: $secondaryColor;
     color: $bgColor;
-    padding: 4px 0;
-    // warning: padding, even top/bottom are adding side scroll bars!!!
+    padding: 1% 0;
 }
-
-// footer .wrapper {
-    // display: flex;
-    // justify-content: center;
-// }
-
-// footer .text1 {
-    // width: calc(50% - 8%);
-    // width: 100%;
-    // margin: 2%;
-    // padding: 2%;
-// }
-
-// footer .bottomFooter {
-//     margin-top: 1px;
-//     // width: 100%;
-// }
-
-// footer h6 {
-//     padding: 2px;
-// }
