--- a/styles/scss/partials/_mediaQueries.scss
+++ b/styles/scss/partials/_mediaQueries.scss
@@ -5,13 +5,11 @@
     }
 
     .dropbtn {
-        width: 50vw;
-        // padding: 3% 6%;
         font-size: 3vw;
     }
 
     footer{
-        margin-top: 11.7%;
+        padding: 2% 0;
     }
 }
 
@@ -22,11 +20,10 @@
     }
     main.wrapper {
         width: 90%;
-        margin: 7% auto;
+        margin: 5% auto;
     }
 
     .dropbtn {
-        width: 60vw;
         padding: 4% 6%;
         font-size: 3.5vw;
     }    
@@ -50,10 +47,8 @@
     main.wrapper {
         width: 95%;
     }
-
     
     .dropbtn {
-        width: 70vw;
         padding: 6% 8%;
         font-size: 4.5vw;
     }    
