--- a/styles/style.css
+++ b/styles/style.css
@@ -315,7 +315,7 @@ h2 {
 
 /* Dropdown Button */
 .dropbtn {
-  width: 45vw;
+  width: 100%;
   background: #233237;
   color: #eac67a;
   padding: 3% 5%;
@@ -326,13 +326,12 @@ h2 {
   border: none;
 }
 
-/* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
   background: #984b43;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
+  width: 100%;
   position: relative;
   display: inline-block;
 }
@@ -347,7 +346,6 @@ h2 {
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdownContent li {
   color: #233237;
   padding: 12px 16px;
@@ -355,16 +353,10 @@ h2 {
   display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdownContent li:hover,
 .dropdownContent li:focus {
   background-color: #ddd;
   border: 1 solid #984b43;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display: block;
 }
 
 li:hover,
@@ -372,6 +364,11 @@ li:focus,
 button:hover,
 button:focus {
   cursor: pointer;
+}
+
+/* Show the dropdown menu */
+.show {
+  display: block;
 }
 
 header {
@@ -384,7 +381,7 @@ footer {
   text-align: center;
   background: #984b43;
   color: #eac67a;
-  padding: 4px 0;
+  padding: 1% 0;
 }
 
 main {
@@ -392,6 +389,7 @@ main {
   margin: 5% auto;
   padding: 2% 3%;
   text-align: center;
+  min-height: 50vh;
 }
 
 main.wrapper {
@@ -413,11 +411,10 @@ ol {
     width: 80%;
   }
   .dropbtn {
-    width: 50vw;
     font-size: 3vw;
   }
   footer {
-    margin-top: 11.7%;
+    padding: 2% 0;
   }
 }
 
@@ -428,10 +425,9 @@ ol {
   }
   main.wrapper {
     width: 90%;
-    margin: 7% auto;
+    margin: 5% auto;
   }
   .dropbtn {
-    width: 60vw;
     padding: 4% 6%;
     font-size: 3.5vw;
   }
@@ -454,7 +450,6 @@ ol {
     width: 95%;
   }
   .dropbtn {
-    width: 70vw;
     padding: 6% 8%;
     font-size: 4.5vw;
   }
