--- a/styles/scss/partials/_globalSettings.scss
+++ b/styles/scss/partials/_globalSettings.scss
@@ -66,7 +66,7 @@ h2 {
 //DROPDOWN MENU
 /* Dropdown Button */
 .dropbtn {
-    width: 45vw;
+    width: 100%;
     background: $primaryColor;
     color: $bgColor;
     padding: 3% 5%;
@@ -77,13 +77,12 @@ h2 {
     border: none;
 }
 
-/* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
     background: $secondaryColor;
 }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
+    width: 100%;
     position: relative;
     display: inline-block;
 }
@@ -98,7 +97,6 @@ h2 {
     z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdownContent li {
     color: $primaryColor;
     padding: 12px 16px;
@@ -106,16 +104,10 @@ h2 {
     display: block;
 }
 
-/* Change color of dropdown links on hover */ // Focus on Menu not working!!
 .dropdownContent li:hover,
 .dropdownContent li:focus {
     background-color: #ddd;
     border: 1 solid $secondaryColor;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-    display:block;
 }
 
 li:hover,
@@ -123,4 +115,9 @@ li:focus,
 button:hover,
 button:focus {
     cursor: pointer;
+}
+
+/* Show the dropdown menu */
+.show {
+    display:block;
 }
