--- a/styles/scss/partials/_mediaQueries.scss
+++ b/styles/scss/partials/_mediaQueries.scss
@@ -5,7 +5,7 @@
     }
 
     .dropbtn {
-        font-size: 3vw;
+        font-size: 5vw;
     }
 
     footer{
@@ -15,41 +15,79 @@
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
+    h1,
+    h2 {
+        line-height: 1;
+    }
+    
+    h1 {
+        font-size: 9rem;
+        line-height: 1;
+        // margin-bottom: 3%;
+    }
+    
+    h2 {
+        font-size: 4.5rem;;
+        margin: 4.5% auto;
+    }
+
+    h3 {
+    font-size: 3.25rem;
+}
+    
     header .wrapper {
         width: 95%;
     }
     main.wrapper {
         width: 90%;
-        margin: 5% auto;
+        margin: 10% auto;
     }
 
     .dropbtn {
         padding: 4% 6%;
-        font-size: 3.5vw;
     }    
 }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
     body {
-        line-height: 2;
+        font-size: 1.8rem;
+        line-height: 1.8;
     }
+
     h1 {
         font-size: 6.5rem;
         line-height: 1;
-        margin-bottom: 3%;
+        margin: 3% auto;
     }
 
     h2 {
         font-size: 3rem;;
     }
 
+    h3 {
+    font-size: 2.5rem;
+}
+
     main.wrapper {
         width: 95%;
+        margin: 10% auto;
     }
     
     .dropbtn {
         padding: 6% 8%;
-        font-size: 4.5vw;
+        font-size: 6vw;
     }    
+
+    .dropdownContent {
+        position: relative;
+    }
+
+    footer .wrapper {
+        width: 80%;
+    }
+
+    footer p {
+        padding: 5% 0;
+    }
 }
