--- a/styles/style.css
+++ b/styles/style.css
@@ -254,11 +254,12 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-family: "Fira Sans", sans-serif;
   color: #233237;
   background-color: #eac67a;
-  line-height: 1.6;
+  text-align: center;
+  line-height: 1.8;
 }
 
 .wrapper {
@@ -303,14 +304,21 @@ li {
 h1 {
   font-family: "Lobster", cursive;
   color: #984b43;
-  font-size: 8rem;
-  line-height: 1.2;
+  font-size: 12rem;
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 6rem;
   color: #eac67a;
+}
+
+h1,
+h2 {
   line-height: 1.2;
+}
+
+h3 {
+  font-size: 4rem;
 }
 
 /* Dropdown Button */
@@ -321,7 +329,7 @@ h2 {
   padding: 3% 5%;
   margin-top: 3%;
   font-family: "Fira Sans", sans-serif;
-  font-size: 2.5vw;
+  font-size: 3.5vw;
   font-weight: bold;
   border: none;
 }
@@ -332,7 +340,6 @@ h2 {
 
 .dropdown {
   width: 100%;
-  position: relative;
   display: inline-block;
 }
 
@@ -371,34 +378,37 @@ button:focus {
   display: block;
 }
 
+ol {
+  list-style-position: inside;
+  padding: 0 5%;
+  list-style-type: decimal;
+}
+
 header {
-  border-bottom: 1px solid #000;
-  text-align: center;
   background: #233237;
 }
 
 footer {
-  text-align: center;
   background: #984b43;
   color: #eac67a;
-  padding: 1% 0;
+  margin-bottom: -10%;
+}
+
+header,
+footer {
+  padding: 2% 0;
 }
 
 main {
   background-color: #fff;
-  margin: 5% auto;
   padding: 2% 3%;
   text-align: center;
   min-height: 50vh;
 }
 
 main.wrapper {
-  width: 50%;
-  margin: 2.5% auto;
-}
-
-ol {
-  padding: 0 5%;
+  width: 65%;
+  margin: 8% auto;
 }
 
 #playlistResult {
@@ -411,7 +421,7 @@ ol {
     width: 80%;
   }
   .dropbtn {
-    font-size: 3vw;
+    font-size: 5vw;
   }
   footer {
     padding: 2% 0;
@@ -420,37 +430,65 @@ ol {
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
+  h1,
+  h2 {
+    line-height: 1;
+  }
+  h1 {
+    font-size: 9rem;
+    line-height: 1;
+  }
+  h2 {
+    font-size: 4.5rem;
+    margin: 4.5% auto;
+  }
+  h3 {
+    font-size: 3.25rem;
+  }
   header .wrapper {
     width: 95%;
   }
   main.wrapper {
     width: 90%;
-    margin: 5% auto;
+    margin: 10% auto;
   }
   .dropbtn {
     padding: 4% 6%;
-    font-size: 3.5vw;
   }
 }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
   body {
-    line-height: 2;
+    font-size: 1.8rem;
+    line-height: 1.8;
   }
   h1 {
     font-size: 6.5rem;
     line-height: 1;
-    margin-bottom: 3%;
+    margin: 3% auto;
   }
   h2 {
     font-size: 3rem;
   }
+  h3 {
+    font-size: 2.5rem;
+  }
   main.wrapper {
     width: 95%;
+    margin: 10% auto;
   }
   .dropbtn {
     padding: 6% 8%;
-    font-size: 4.5vw;
+    font-size: 6vw;
+  }
+  .dropdownContent {
+    position: relative;
+  }
+  footer .wrapper {
+    width: 80%;
+  }
+  footer p {
+    padding: 5% 0;
   }
 }
